theme/totara/styles_totara.css
/* ... */
/* Hover Styles */
.tabrow0 a:link:hover,
.tabrow0 a:visited:hover,
.tabrow0 .last a:hover,
.tabrow0 a:hover {
  background-image: url(images/tab/left_white.gif);
  color: #999999;
}
.tabrow0 a:link:hover span,
.tabrow0 a:visited:hover span,
.tabrow0 .last a:hover span,
.tabrow0 a:hover span {
  background-image: url(images/tab/right_white.gif);
  color: #333333;
}

.tabrow0 .here a:hover {
  background-image: url(images/tab/left.gif);
}

.tabrow0 .here a:hover span {
  background-image: url(images/tab/right.gif);
}



.tabrow0 .here .active a,
.tabrow0 .here .active a:hover {
  font-weight:bold;
}

ul.tabrow0 li ul.tabrow1 a{
	background: none;
}



.tabrow1 div,
.tabrow1 ul {
  border-color:#aaaaaa;
}
ul.tabrow1 li a,
ul.tabrow1 li a:link,
ul.tabrow1 li a:visited {
  color: #322f2c !important;
}

.tabrow0 .tabrow1 li.active a span {
    color: #7D8412;
}

.tabrow0 .tabrow1 li.active a:hover span {
    color: #7D8412;
}

.tabrow0 .tabrow1 li a:hover span {
    color: #7D8412;
}

.tabrow0 ul li a:hover span,
.tabrow0 ul a {
  color: #322f2c;
}

.tabrow0 ul li.here a:hover span {
  color: #444;
}

.tabrow0 div, .tabrow0 ul {
  border-color: #cccccc;
  padding-top: .55em;
  background: #FFFFFF;
  border-bottom: 1px solid #cccccc;
}

.tabrow0 .empty {
    border-bottom:0 none;
    border-top:1px solid #AAAAAA;
}
.tabtree a,
.tabtree a:link,
.tabtree a:visited,
.tabtree a:hover {
  text-decoration: none;
}


/* Header tabs */
.header-tabs .tabtree {
  margin-top: 0;
  background: transparent url(images/tab/right.gif) no-repeat top right;
  padding: 10px 0 4px 0;
  position: relative;
  z-index: -1;
}

.navbar {
  position: relative;
  z-index: 0;
}

.header-tabs {
  margin: 0 0 -1px 0;
}

#header-tabs .tabrow0 {
  padding-bottom: 0;
  text-align: left;
  line-height: normal;
  margin-top: 0;
}

#header-tabs .tabrow1 {
  display: none;
}

#site-index .header-tabs {
  margin-bottom: 10px;
}

#site-index .header-tabs .tabtree {
  border-bottom: 1px solid #DDDDDD;
}


/******************************************
 * Frontpage
 *****************************************/

#front-blocks-spot h2 {
  color: #FFFFFF;
  font-size:1.7em;
  line-height: 1.25em;
  letter-spacing: -0.03em;
}

#front-blocks-spot td.col-blank {
  padding:4px;
}

#front-blocks-spot td.col-one,
#front-blocks-spot td.col-two{
  width:335px;
  padding-bottom: 11px;
}

#front-blocks-spot td.front-spot-one {
  background: transparent url('images/spot_one.jpg') no-repeat top center;
}

#front-blocks-spot td.front-spot-two {
  background: transparent url('images/spot_two.jpg') no-repeat top center;
}

#front-blocks-spot td.front-spot-three {
  background: transparent url('images/spot_three.jpg') no-repeat top center;
}

#front-blocks-spot td.front-spot-four {
  background: transparent url('images/spot_four.jpg') no-repeat top center;
}

#front-blocks-spot td .footer {
  background: transparent url('images/fp_bg_ftr.gif') no-repeat bottom left;
}

#front-blocks-spot td.front-spot-one .footer {
  background-color: #f26921;
}

#front-blocks-spot td.front-spot-two .footer {
  background-color: #34B9E4;
}

#front-blocks-spot td.front-spot-three .footer {
  background-color: #a2b001;
}

#front-blocks-spot td.front-spot-four .footer {
  background-color: #9f187c;
}

#front-blocks-spot .footer .more a {
  font-family: 'Trebuchet ms', Arial, Helvetica, sans-serif;
  font-size:1.1em;
  color:#FFFFFF;
  letter-spacing: -0.03em;
}

#front-blocks-spot .footer .more a:hover {
  color: #FFFFFF !important;
  text-decoration: underline;
}

#front-blocks-spot td.front-spot-one .footer .more a  {
  background: url('images/arw_btm_org.gif') no-repeat right 3px;
}

#front-blocks-spot td.front-spot-two .footer .more a  {
  background: url('images/arw_btm_blu.gif') no-repeat right 3px;
}

#front-blocks-spot td.front-spot-three .footer .more a  {
  background: url('images/arw_btm_grn.gif') no-repeat right 3px;
}

#front-blocks-spot td.front-spot-four .footer .more a  {
  background: url('images/arw_btm_pur.gif') no-repeat right 3px;
}

#front-blocks-lists td {
   font-family: 'Trebuchet ms',Verdana, Arial, Helvetica, sans-serif;
   width:352px;
}

#front-blocks-lists td.col-one {
   padding-right: 14px;
}

#front-blocks-lists h2 {
  font-size: 1.5em;
  font-weight:normal;
  padding: 3px 10px;
  margin:0;
  border:1px solid #D2D2D2;
  border-bottom:none;
}

#front-blocks-lists .front-recommended-courses h2 {
   color: #34b9e4;
}

#front-blocks-lists .front-latest-news h2 {
   color: #009697;
}

#front-blocks-lists .content {
   padding:7px 10px;
   border-left: 1px solid #d2d2d2;
   border-right: 1px solid #d2d2d2;
}

#front-blocks-lists .content a {
   color: #322F2C;
}

#front-blocks-lists .front-recommended-courses ul li {
  background: url('images/arw_blu.gif') no-repeat left 4px;
}

#front-blocks-lists .front-latest-news ul li {
  background: url('images/arw_teal.gif') no-repeat left 4px;
}

#front-blocks-lists td .footer {
  background: transparent url('images/fp_bg_ftr.gif') no-repeat bottom left;
}

#front-blocks-lists .front-recommended-courses .footer {
  background-color: #34b9e4;
}

#front-blocks-lists .front-latest-news .footer {
  background-color: #009697;
}

#front-blocks-lists .footer .more a {
  font-size:1.1em;
  letter-spacing:-0.03em;
  color:#FFFFFF;
}

#front-blocks-lists .front-recommended-courses .footer .more a {
  background: url('images/arw_btm_blu.gif') no-repeat right 4px;
}

#front-blocks-lists .front-latest-news .footer .more a {
  background: url('images/arw_btm_teal.gif') no-repeat right 4px;
}


/******************************************
 * Page menu
 *****************************************/

.mod-pagemenu .menutree .menuitem a {
  color: #2970A6;
  text-transform: uppercase;
}

.mod-pagemenu .menutree .childtree .menuitem a {
  text-transform: none;
}

.mod-pagemenu .menutree .menuitem a:hover {
  text-decoration: none;
}

.mod-pagemenu .menutree .childtree {
  margin-left: -5px;
}
/* ... */

